--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,7 @@ a{
 }
 
 /* General section style */
+
 .page-section{
     display: flex;
     flex-direction: row;
@@ -92,11 +93,12 @@ article{
 }
 
 /* Work section style */
+
 .grid{
     display: grid;
     width: 75%;
     grid-template-rows: 500px 250px 250px;
-    /*grid-template-columns: 1fr 1fr;*/
+    grid-template-columns: 1fr 1fr;
     grid-template-areas: 
     "main-work main-work"
     "otherwork1 otherwork2"
@@ -131,4 +133,24 @@ article{
 
 .gridElement{
     margin: 1.5rem;
+    cursor: pointer;
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+}
+
+.page-section h2{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 2.5rem;
+    font-size: 5rem;
+    padding-left: 5em;
+}
+
+.titlebox{
+    background-color: red;
+    width: fit-content;
+    margin-bottom: 2em;
+    padding: 1rem;
 }
