fixed links to pics in readme and added a link to refactor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ article{
 
 .main-work{
     grid-area: main-work;
-    background-image: url("../images/wip.jpeg");
+    background-image: url("../images/code-refactor.png");
 }
 
 .otherWork-1{
